--- a/AVPlayerDemo/AVPlayerDemo/Info.plist
+++ b/AVPlayerDemo/AVPlayerDemo/Info.plist
@@ -5,7 +5,7 @@
 	<key>DeliveryClient</key>
 	<dict>
 		<key>Key</key>
-		<string>demoswebsiteandpartners</string>
+		<string>borisborgobello</string>
 	</dict>
 	<key>NSAppTransportSecurity</key>
 	<dict>
