--- a/AVPlayerDemo/AVPlayerDemoTV/Info.plist
+++ b/AVPlayerDemo/AVPlayerDemoTV/Info.plist
@@ -12,5 +12,7 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>CFBundleShortVersionString</key>
+	<string>22.09.1.1</string>
 </dict>
 </plist>
